2011-04-21  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclCompile.c:		Make sure SetFooFromAny routines react
	* generic/tclIndexObj.c:	reasonably when passed a NULL interp.
	* generic/tclNamesp.c:
	* generic/tclObj.c:

2011-04-21  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tcl.h:       fix for [Bug 3288345]: Wrong Tcl_StatBuf
	* generic/tclInt.h:    used on MinGW. Make sure that all _WIN32
	* generic/tclIOUtil.c: compilers use exactly the same layout
	* win/tclWinFile.c:    for Tcl_StatBuf - the one used by MSVC6 -
	* win/configure.in:    in all situations.
	* win/configure:

2011-04-20  Andreas Kupries  <andreask@activestate.com>

	* tests/info.test: Fixed the shift in line numbers used for
	testing 'info frame' introduced by checkin [79367df0f0]
	(Mar 2, 2011).

2011-04-13  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclVar.c: fix for [Bug 2662380], crash caused by
	appending to a variable with a write trace that unsets it.

2011-04-04  Don Porter  <dgp@users.sourceforge.net>

	* README:	Updated README files, repairing broken URLs and
	* macosx/README:	removing other bits that were clearly wrong.
	* unix/README:	Still could use more eyeballs on the detailed build
	* win/README:	advice on various plaforms. [Bug 3202030]

2011-03-25  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclHash.c: [Bug 3007895]: Tcl_(Find|Create)HashEntry
	stub entries can never be called. They still cannot be called
	(no change in functionality), but at least they now do
	exactly the same as the Tcl_(Find|Create)HashEntry macro's,
	so the confusion addressed in this Bug report is gone.
	Merged --cherrypick from Tcl8.5 (2010-12-31,e75735ef76)

2011-03-24  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclFCmd.c (TclFileAttrsCmd): Ensure that any reference to
	temporary index tables is squelched immediately rather than hanging
	around to trip us up in the future.

2011-03-16  Jan Nijtmans  <nijtmans@users.sf.net>
